# devops-engineer-from-scratch-project-313

./: .env  .gitignore  Dockerfile  Makefile  README.md  main.py  nginx.conf  pyproject.toml  start.sh
.github/workflows/: ci.yml  hexlet-check.yml
app/: api.py  config.py  database.py  dependencies.py  dto.py  main.py  models.py  repository.py
tests/: conftest.py  test_api.py
